11_traffic-management/11.7/vs-forecast-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: forecast-route
spec:
  hosts:
  - forecast
  http:
  - route:
    - destination:
        host: forecast
        subset: v2
    retries:
      attempts: 5
      perTryTimeout: 1s
      retryOn: "5xx"
